[FIX] Adjust blog logo spacing

--- a/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
+++ b/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
@@ -1473,7 +1473,7 @@ a.readmore:after {
 // Blog Header Styles
 .blog .logo {
     float: left;
-    margin: 17px auto;
+    margin: 17px auto 17px 35px;
     width: auto;
 }
 .blog .logo > a {
